--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,177 +11,177 @@
 #svg-logo path:nth-child(3){
     stroke-dashoffset: 113.20957946777344px;
     stroke-dasharray: 113.20957946777344px;
-    animation: draw 1s ease forwards 0.2s
+    animation: draw 1s ease forwards 0.1s
 }
 #svg-logo path:nth-child(4){
     stroke-dashoffset: 141.7318115234375px;
     stroke-dasharray: 141.7318115234375px;
-    animation: draw 1s ease forwards 0.4s
+    animation: draw 1s ease forwards 0.2s
 }
 #svg-logo path:nth-child(5){
     stroke-dashoffset: 111.87397766113281px;
     stroke-dasharray: 111.87397766113281px;
-    animation: draw 1s ease forwards 0.6s
+    animation: draw 1s ease forwards 0.3s
 }
 #svg-logo path:nth-child(6){
     stroke-dashoffset: 76.0290298461914px;
     stroke-dasharray: 76.0290298461914px;
-    animation: draw 1s ease forwards 0.8s
+    animation: draw 1s ease forwards 0.4s
 }
 #svg-logo path:nth-child(7){
     stroke-dashoffset: 113.20965576171875px;
     stroke-dasharray: 113.20965576171875px;
-    animation: draw 1s ease forwards 1s
+    animation: draw 1s ease forwards 0.5s
 }
 #svg-logo path:nth-child(8){
     stroke-dashoffset: 106.54095458984375px;
     stroke-dasharray: 106.54095458984375px;
-    animation: draw 1s ease forwards 1.2s
+    animation: draw 1s ease forwards 0.6s
 }
 #svg-logo path:nth-child(9){
     stroke-dashoffset: 111.873291015625px;
     stroke-dasharray: 111.873291015625px;
-    animation: draw 1s ease forwards 1.4s
+    animation: draw 1s ease forwards 0.7s
 }
 #svg-logo path:nth-child(10){
     stroke-dashoffset: 93.85343933105469px;
     stroke-dasharray: 93.85343933105469px;
-    animation: draw 1s ease forwards 1.6s
+    animation: draw 1s ease forwards 0.8s
 }
 #svg-logo path:nth-child(11){
     stroke-dashoffset: 111.3603515625px;
     stroke-dasharray: 111.3603515625px;
-    animation: draw 1s ease forwards 1.8s
+    animation: draw 1s ease forwards 0.9s
 }
 #svg-logo path:nth-child(12){
     stroke-dashoffset: 111.3603515625px;
     stroke-dasharray: 111.3603515625px;
-    animation: draw 1s ease forwards 2s
+    animation: draw 1s ease forwards 1s
 }
 #svg-logo path:nth-child(13){
     stroke-dashoffset: 176.63047790527344;
     stroke-dasharray: 176.63047790527344;
-    animation: draw 1s ease forwards 2.2s;
+    animation: draw 1s ease forwards 1.1s;
 }
 #svg-logo path:nth-child(14){
     stroke-dashoffset: 113.20988464355469px;
     stroke-dasharray: 113.20988464355469px;
-    animation: draw 1s ease forwards 2.4s
+    animation: draw 1s ease forwards 1.2s
 }
 #svg-logo path:nth-child(15){
     stroke-dashoffset: 106.54095458984375px;
     stroke-dasharray: 106.54095458984375px;
-    animation: draw 1s ease forwards 2.6s
+    animation: draw 1s ease forwards 1.3s
 }
 #svg-logo path:nth-child(16){
     stroke-dashoffset: 155.85292053222656px;
     stroke-dasharray: 155.85292053222656px;
-    animation: draw 1s ease forwards 2.8s
+    animation: draw 1s ease forwards 1.4s
 }
 #svg-logo path:nth-child(17){
     stroke-dashoffset: 76.02902221679688px;
     stroke-dasharray: 76.02902221679688px;
-    animation: draw 1s ease forwards 3s
+    animation: draw 1s ease forwards 1.5s
 }
 #svg-logo path:nth-child(18){
     stroke-dashoffset: 93.85340118408203px;
     stroke-dasharray: 93.85340118408203px;
-    animation: draw 1s ease forwards 3.2s
+    animation: draw 1s ease forwards 1.6s
 }
 #svg-logo path:nth-child(19){
     stroke-dashoffset: 113.21000671386719px;
     stroke-dasharray: 113.21000671386719px;
-    animation: draw 1s ease forwards 3.4s
+    animation: draw 1s ease forwards 1.7s
 }
 #svg-logo path:nth-child(20){
     stroke-dashoffset: 125.44799041748047px;
     stroke-dasharray: 125.44799041748047px;
-    animation: draw 1s ease forwards 3.6s
+    animation: draw 1s ease forwards 1.8s
 }
 #svg-logo path:nth-child(21){
     stroke-dashoffset: 122.99142456054688px;
     stroke-dasharray: 122.99142456054688px;
-    animation: draw 1s ease forwards 3.8s
+    animation: draw 1s ease forwards 1.9s
 }
 #svg-logo path:nth-child(22){
     stroke-dashoffset: 119.2937240600586px;
     stroke-dasharray: 119.2937240600586px;
-    animation: draw 1s ease forwards 4s
+    animation: draw 1s ease forwards 2s
 }
 #svg-logo path:nth-child(23){
     stroke-dashoffset: 106.54109191894531px;
     stroke-dasharray: 106.54109191894531px;
-    animation: draw 1s ease forwards 4.2s
+    animation: draw 1s ease forwards 2.1s
 }
 #svg-logo path:nth-child(24){
     stroke-dashoffset: 159.9368896484375px;
     stroke-dasharray: 159.9368896484375px;
-    animation: draw 1s ease forwards 4.4s
+    animation: draw 1s ease forwards 2.2s
 }
 #svg-logo path:nth-child(25){
     stroke-dashoffset: 126.2273941040039px;
     stroke-dasharray: 126.2273941040039px;
-    animation: draw 1s ease forwards 4.6s
+    animation: draw 1s ease forwards 2.3s
 }
 #svg-logo path:nth-child(26){
     stroke-dashoffset: 102.52104187011719px;
     stroke-dasharray: 102.52104187011719px;
-    animation: draw 1s ease forwards 4.8s
+    animation: draw 1s ease forwards 2.4s
 }
 #svg-logo path:nth-child(27){
     stroke-dashoffset: 93.85336303710938px;
     stroke-dasharray: 93.85336303710938px;
-    animation: draw 1s ease forwards 5s
+    animation: draw 1s ease forwards 2.5s
 }
 #svg-logo path:nth-child(28){
     stroke-dashoffset: 76.02903747558594px;
     stroke-dasharray: 76.02903747558594px;
-    animation: draw 1s ease forwards 5.2s
+    animation: draw 1s ease forwards 2.6s
 }
 #svg-logo path:nth-child(29){
     stroke-dashoffset: 111.873779296875px;
     stroke-dasharray: 111.873779296875px;
-    animation: draw 1s ease forwards 5.4s
+    animation: draw 1s ease forwards 2.7s
 }
 #svg-logo path:nth-child(30){
     stroke-dashoffset: 126.2274169921875px;
     stroke-dasharray: 126.2274169921875px;
-    animation: draw 1s ease forwards 5.6s
+    animation: draw 1s ease forwards 2.8s
 }
 #svg-logo path:nth-child(30){
     stroke-dashoffset: 126.2274169921875px;
     stroke-dasharray: 126.2274169921875px;
-    animation: draw 1s ease forwards 5.8s
+    animation: draw 1s ease forwards 2.9s
 }
 #svg-logo path:nth-child(31){
     stroke-dashoffset: 126.2274169921875px;
     stroke-dasharray: 126.2274169921875px;
-    animation: draw 1s ease forwards 6s
+    animation: draw 1s ease forwards 3s
 }
 #svg-logo path:nth-child(32){
     stroke-dashoffset: 187.6173095703125px;
     stroke-dasharray: 187.6173095703125px;
-    animation: draw 1s ease forwards 6.2s
+    animation: draw 1s ease forwards 3.1s
 }
 #svg-logo path:nth-child(33){
     stroke-dashoffset: 187.6173095703125px;
     stroke-dasharray: 187.6173095703125px;
-    animation: draw 1s ease forwards 6.4s
+    animation: draw 1s ease forwards 3.2s
 }
 #svg-logo path:nth-child(34){
     stroke-dashoffset: 126.22724151611328px;
     stroke-dasharray: 126.22724151611328px;
-    animation: draw 1s ease forwards 6.6s
+    animation: draw 1s ease forwards 3.3s
 }
 #svg-logo path:nth-child(35){
     stroke-dashoffset: 126.22724151611328px;
     stroke-dasharray: 126.22724151611328px;
-    animation: draw 1s ease forwards 6.8s
+    animation: draw 1s ease forwards 3.4s
 }
 #svg-logo path:nth-child(36){
     stroke-dashoffset: 106.54119873046875px;
     stroke-dasharray: 106.54119873046875px;
-    animation: draw 1s ease forwards 7s
+    animation: draw 1s ease forwards 3.5s
 }
 
 @keyframes draw {
@@ -197,4 +197,8 @@
     to{
         fill: #22c55e!important;
     }
+}
+
+.menu-1:hover .dropdown-1{
+    display: block;
 }
